# 88xiwfTl9kAcPccoELmUUQ-

./: README.md
Front End/: CMakeLists.txt
Front End/Client/: Communicator.cpp  MainClient.cpp  MainSocket.cpp  MainSocket.h  MyForm.cpp  MyForm.h  main.cpp  main2.cpp
Front End/ClientAppFinal/: 1.py  BaseSocket.cpp  BaseSocket.h  ClientConnection.cpp  ClientConnection.h  ClientSideAPP.pro  ClientSideAPP.pro.user.3b53480  ClientSideAPP.pro.user.59448f2  ClientSideAPP.pro.user.c8f5ec6  EncDec.cpp  EncDec.h  Tokenizer.h  connecttointernet.cpp  connecttointernet.h  connecttointernet.ui  customalabel.cpp  customalabel.h  customlabel.cpp  customlabel.h  customlable.cpp  customlable.h  form.cpp  form.h  form.ui  globalCalls.cpp  globalCalls.h  loaning.cpp  loaning.h  loaning.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  script.py.txt  signup.cpp  signup.h  signup.ui  test.cpp  test.h  test.ui  (+7 more)
Front End/Project UI UX Front-End/: Untitled-1.ai
Front End/Project5/: MyForm.cpp  MyForm.h  MyForm.resx  Project5.sln  Project5.vcxproj
Front End/Server/: Communicator.cpp  main.cpp  (+6 more)
Server/: ATM.cpp  Accounts.cpp  Accounts.h  AdminInterface.cpp  BaseSocket.cpp  BaseSocket.h  CMakeLists.txt  ClientConnection.cpp  ClientConnection.h  ClientsHandler.cpp  ClientsHandler.h  ConnectionHandler.cpp  ConnectionHandler.h  Deposit.cpp  EncDec.cpp  EncDec.h  Linker.cpp  Linker.h  Loan.cpp  Loan.h  MainClient.h  Server.cpp  Server.h  SignUp.cpp  VRBankDB.db  dbCheck.py  dbHandler.cpp  dbHandler.h  globalDeclarations.cpp  main.cpp  script.py  setDB.cpp  temp.cpp  temp.h  test.cpp
(+151 files in other folders)
